--- a/index.html
+++ b/index.html
@@ -249,9 +249,13 @@
 
                 await this.loadContacts();
 
-                this.connection.on(Constants.PushCodes.Advert, async () => {
-                    console.log("on advert");
+                this.connection.on(Constants.PushCodes.Advert, async (data) => {
+                    console.log("Advert", data);
                     await this.loadContacts();
+                });
+
+                this.connection.on(Constants.PushCodes.NewAdvert, async (data) => {
+                    console.log("NewAdvert", data);
                 });
 
                 this.connection.on(Constants.PushCodes.PathUpdated, async (event) => {
